src/test/ui/issues/issue-11692-2.rs
fn main() {
    concat!(test!()); //~ ERROR cannot find macro `test!` in this scope
}
